<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <TextView
        style="@style/text_date_title"
        android:text="@string/string_sun" />

    <TextView
        style="@style/text_date_title"
        android:text="@string/string_mon" />

    <TextView
        style="@style/text_date_title"
        android:text="@string/string_tue" />

    <TextView
        style="@style/text_date_title"
        android:text="@string/string_wed" />

    <TextView
        style="@style/text_date_title"
        android:text="@string/string_thu" />

    <TextView
        style="@style/text_date_title"
        android:text="@string/string_fri" />

    <TextView
        style="@style/text_date_title"
        android:text="@string/string_sat" />

</LinearLayout>
